--- a/questionbox/package.json
+++ b/questionbox/package.json
@@ -11,6 +11,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tachyons": "^4.12.0",
+    "use-local-storage-state": "^9.0.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
